--- a/newProje/aile.html
+++ b/newProje/aile.html
@@ -12,14 +12,13 @@
 
 <body>
     <header>
-        <h1 style="color: rgb(38, 106, 207);">
+       <h1 style="color: rgb(38, 106, 207);">Yerel Etkinlik Bulucu</h1>
             <a href="index.html">
                 <img src="img/biletix.png" 
                 alt="Tıklanabilir biletix logosu Resim"
                 width="120"
                 height="45">
             </a>
-            Yerel Etkinlik Bulucu
         </h1>
         <h2>
         <p>
