--- a/newProje/index.html
+++ b/newProje/index.html
@@ -12,16 +12,14 @@
 
 <body>
     <header>
-    <h1 style="color: rgb(38, 106, 207);">
+   <h1 style="color: rgb(38, 106, 207);">Yerel Etkinlik Bulucu</h1>
         <img 
         src="img/biletix.png"
         alt="biletix logo"
         width="120" 
         height="45" 
         >
-        Yerel Etkinlik Bulucu
-
-    </h1>
+       
     <h2>
     <p>
         <a href="muzik.html" style=" color: rgb(0, 0, 0);">Müzik &#9835;</a> |
